armor_weights now uses Tags and is synced to clients